# godot-rust-template

./: .env  Cargo.toml  cargo-generate.toml  justfile  post-script.rhai
godot/: Scene.tscn  project.godot  {{crate_name}}.gdnlib  {{project-name}}.gdnlib
godot/gdns/: HelloWorld.gdns
src/: lib.rs
templates/: rust_class.gdns
